@@ -1,43 +1,48 @@
 package com.statista.code.challenge.repository;
 
+import com.statista.code.challenge.model.BookingIds;
 import com.statista.code.challenge.model.BookingModel;
+import com.statista.code.challenge.model.Currencies;
 import com.statista.code.challenge.util.BookingIdGenerator;
 import com.statista.code.challenge.util.SingletonBookingMap;
 import org.springframework.stereotype.Component;
-
-import java.util.*;
+import java.util.Map;
+import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 @Component
-public class BookingRepositoryImpl implements BookingRepository{
+public class BookingRepositoryImpl implements BookingRepository {
 
-    public void save (BookingModel bookingModel){
+    public BookingModel save(BookingModel bookingModel){
         saveBookingByBookingId(bookingModel);
         saveBookingByDepartment(bookingModel);
         saveBookingByCurrency(bookingModel);
+        return bookingModel;
     }
 
     private void saveBookingByBookingId(BookingModel bookingModel){
-        int  bookingId = BookingIdGenerator.generateBookingId();
+        int bookingId = BookingIdGenerator.generateBookingId();
         bookingModel.setBookingId(bookingId);
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<Integer, BookingModel> bookingMap = singletonMap1.getBookingMap();
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<Integer, BookingModel> bookingMap = bookings.getBookingMap();
         bookingMap.put(bookingId, bookingModel);
     }
+
     private void saveBookingByDepartment(BookingModel bookingModel) {
-        String department = bookingModel.getDepartment();
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<String, List<Integer>> departmentMap = singletonMap1.getDepartmentMap();
-        if(departmentMap.containsKey(department)){
-            List<Integer>bookingModelList = departmentMap.get(department);
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<String, List<Integer>> departmentMap = bookings.getDepartmentMap();
+        if (departmentMap.containsKey(bookingModel.getDepartment().name())) {
+            List<Integer> bookingModelList = departmentMap.get(bookingModel.getDepartment().name());
             bookingModelList.add(bookingModel.getBookingId());
-        }else{
-            departmentMap.put(department,new ArrayList<>(List.of(bookingModel.getBookingId())));
+        } else {
+            departmentMap.put(bookingModel.getDepartment().name(), new ArrayList<>(Arrays.asList(bookingModel.getBookingId())));
         }
     }
     private void saveBookingByCurrency(BookingModel bookingModel){
-        String currency = bookingModel.getCurrency();
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<String, Double> currencyMap = singletonMap1.getCurrencyMap();
+        String currency = bookingModel.getCurrency().name();
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<String, Double> currencyMap = bookings.getCurrencyMap();
         if(currencyMap.containsKey(currency)){
             double amount = currencyMap.get(currency) + bookingModel.getPrice();
             currencyMap.put(currency,amount);
@@ -46,40 +51,35 @@ public class BookingRepositoryImpl implements BookingRepository{
         }
     }
 
-    public void update(BookingModel bookingModel, int bookingId) {
+    public BookingModel update(int bookingId, BookingModel bookingModel) {
         bookingModel.setBookingId(bookingId);
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<Integer, BookingModel> bookingMap = singletonMap1.getBookingMap();
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<Integer, BookingModel> bookingMap = bookings.getBookingMap();
         bookingMap.put(bookingId, bookingModel);
-    }
-    public BookingModel findByBookingId(int id) {
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<Integer, BookingModel> bookingMap = singletonMap1.getBookingMap();
-        BookingModel booking = bookingMap.entrySet().stream()
-                .filter(n -> n.getKey().equals(id))
-                .map(Map.Entry::getValue)
-                .findFirst()
-                .orElse(null);
-        return booking;
+        return bookingModel;
     }
 
-    public List<Integer> findByDepartment(String department) {
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<String, List<Integer>> departmentMap = singletonMap1.getDepartmentMap();
-        List<Integer> bookingIds = departmentMap.get(department);
-        return bookingIds;
+    public BookingModel findByBookingId(int id) {
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<Integer, BookingModel> bookingMap = bookings.getBookingMap();
+        return bookingMap.get(id);
+    }
+
+    public BookingIds findByDepartment(String department) {
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<String, List<Integer>> departmentMap = bookings.getDepartmentMap();
+        return new BookingIds(departmentMap.get(department));
     }
 
     public double getSumByCurrency(String currency) {
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<String, Double> currencyMap = singletonMap1.getCurrencyMap();
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<String, Double> currencyMap = bookings.getCurrencyMap();
         return currencyMap.get(currency);
     }
 
-    public Set<String> getUsedCurrencies() {
-        SingletonBookingMap singletonMap1 = SingletonBookingMap.getInstance();
-        Map<String, Double> currencyMap = singletonMap1.getCurrencyMap();
-        return currencyMap.keySet();
+    public Currencies getUsedCurrencies() {
+        SingletonBookingMap bookings = SingletonBookingMap.getInstance();
+        Map<String, Double> currencyMap = bookings.getCurrencyMap();
+        return new Currencies(currencyMap.keySet());
     }
-
 }
